--- a/TDA_Analysis_Scripts/Forrest_StatisticalAnalysis.ipynb
+++ b/TDA_Analysis_Scripts/Forrest_StatisticalAnalysis.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6ffce340-6f6d-40b2-9777-7a680e5067e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle as pk\n",
-    "scomplex = pk.load(open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\Pool26_2PCA100Cube20Perc_complex_withMax.p\",\"rb\"))"
+    "scomplex = pk.load(open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\LetsGoAgain\\Pool26_2PCA100Cube20Perc_complex_withMax.p\",\"rb\"))\n",
+    "scomplex_RobustScaled = pk.load(open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\LetsGoAgain\\Pool26_2PCA100Cube20Perc_complex_withMax_RobustScaled.p\",\"rb\"))\n",
+    "scomplex_StandardScaled = pk.load(open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\LetsGoAgain\\Pool26_2PCA100Cube20Perc_complex_withMax_StandardScaled.p\",\"rb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fda2d145-4647-47a8-9041-14cba511a512",
    "metadata": {},
    "outputs": [],
@@ -24,28 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4962ed3c-2cf4-423c-85fc-2afaf2c13f23",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes', 'density', 'graph', 'maxima', 'states'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes', 'density', 'graph', 'maxima', 'states'])\n",
+      "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes', 'density', 'graph', 'maxima', 'states'])\n",
+      "dict_keys(['nodes', 'links', 'simplices', 'meta_data', 'meta_nodes', 'density', 'graph', 'maxima', 'states'])\n"
+     ]
     }
    ],
    "source": [
-    "scomplex.keys()"
+    "print(scomplex.keys())\n",
+    "print(scomplex_RobustScaled.keys())\n",
+    "print(scomplex_StandardScaled.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3724ef36-b91b-4603-8994-a2ba13a2a6f7",
    "metadata": {},
    "outputs": [
@@ -53,18 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['cube37_cluster0', 'cube289_cluster2', 'cube103_cluster0', 'cube545_cluster0', 'cube334_cluster0', 'cube257_cluster0', 'cube39_cluster0', 'cube180_cluster0', 'cube364_cluster0', 'cube23_cluster0', 'cube27_cluster0'])\n"
+      "dict_keys(['cube37_cluster0', 'cube289_cluster2', 'cube103_cluster0', 'cube545_cluster0', 'cube334_cluster0', 'cube257_cluster0', 'cube39_cluster0', 'cube180_cluster0', 'cube364_cluster0', 'cube23_cluster0', 'cube27_cluster0'])\n",
+      "dict_keys(['cube383_cluster0', 'cube490_cluster0', 'cube39_cluster0', 'cube334_cluster0', 'cube627_cluster0', 'cube545_cluster0', 'cube364_cluster0', 'cube459_cluster0', 'cube300_cluster0', 'cube380_cluster0', 'cube222_cluster0', 'cube339_cluster0', 'cube376_cluster0', 'cube181_cluster0', 'cube114_cluster0', 'cube168_cluster0', 'cube487_cluster0', 'cube220_cluster0', 'cube265_cluster0', 'cube78_cluster0', 'cube62_cluster0'])\n",
+      "dict_keys(['cube627_cluster0', 'cube490_cluster0', 'cube220_cluster0', 'cube383_cluster0', 'cube222_cluster0', 'cube64_cluster0', 'cube334_cluster0', 'cube62_cluster0', 'cube380_cluster0', 'cube364_cluster0', 'cube188_cluster0', 'cube300_cluster0', 'cube114_cluster0', 'cube339_cluster0', 'cube487_cluster0', 'cube265_cluster0', 'cube376_cluster0', 'cube459_cluster0', 'cube78_cluster0', 'cube545_cluster0'])\n"
      ]
     }
    ],
    "source": [
     "states = scomplex['states']\n",
-    "print(states.keys())"
+    "statesRobust = scomplex_RobustScaled['states']\n",
+    "statesStandard = scomplex_StandardScaled['states']\n",
+    "print(states.keys())\n",
+    "print(statesRobust.keys())\n",
+    "print(statesStandard.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "db6c2dd6-bced-44b8-bbea-30ff1feef8e0",
    "metadata": {},
    "outputs": [],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "45dab630-164e-47b3-a62a-0412b93d5424",
    "metadata": {},
    "outputs": [],
@@ -105,9 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "416f51ad-5140-424b-99dc-7e4f0ba8758d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +135,50 @@
       "Max / state is:  cube180_cluster0\n",
       "Max / state is:  cube364_cluster0\n",
       "Max / state is:  cube23_cluster0\n",
-      "Max / state is:  cube27_cluster0\n"
+      "Max / state is:  cube27_cluster0\n",
+      "-----\n",
+      "Max / state is:  cube383_cluster0\n",
+      "Max / state is:  cube490_cluster0\n",
+      "Max / state is:  cube39_cluster0\n",
+      "Max / state is:  cube334_cluster0\n",
+      "Max / state is:  cube627_cluster0\n",
+      "Max / state is:  cube545_cluster0\n",
+      "Max / state is:  cube364_cluster0\n",
+      "Max / state is:  cube459_cluster0\n",
+      "Max / state is:  cube300_cluster0\n",
+      "Max / state is:  cube380_cluster0\n",
+      "Max / state is:  cube222_cluster0\n",
+      "Max / state is:  cube339_cluster0\n",
+      "Max / state is:  cube376_cluster0\n",
+      "Max / state is:  cube181_cluster0\n",
+      "Max / state is:  cube114_cluster0\n",
+      "Max / state is:  cube168_cluster0\n",
+      "Max / state is:  cube487_cluster0\n",
+      "Max / state is:  cube220_cluster0\n",
+      "Max / state is:  cube265_cluster0\n",
+      "Max / state is:  cube78_cluster0\n",
+      "Max / state is:  cube62_cluster0\n",
+      "------\n",
+      "Max / state is:  cube627_cluster0\n",
+      "Max / state is:  cube490_cluster0\n",
+      "Max / state is:  cube220_cluster0\n",
+      "Max / state is:  cube383_cluster0\n",
+      "Max / state is:  cube222_cluster0\n",
+      "Max / state is:  cube64_cluster0\n",
+      "Max / state is:  cube334_cluster0\n",
+      "Max / state is:  cube62_cluster0\n",
+      "Max / state is:  cube380_cluster0\n",
+      "Max / state is:  cube364_cluster0\n",
+      "Max / state is:  cube188_cluster0\n",
+      "Max / state is:  cube300_cluster0\n",
+      "Max / state is:  cube114_cluster0\n",
+      "Max / state is:  cube339_cluster0\n",
+      "Max / state is:  cube487_cluster0\n",
+      "Max / state is:  cube265_cluster0\n",
+      "Max / state is:  cube376_cluster0\n",
+      "Max / state is:  cube459_cluster0\n",
+      "Max / state is:  cube78_cluster0\n",
+      "Max / state is:  cube545_cluster0\n"
      ]
     }
    ],
@@ -139,43 +194,38 @@
     "        summaryDf[var] = subDf_dict[state][var].describe()\n",
     "    summaryDf_dict[state] = summaryDf\n",
     "    #display(summaryDf)\n",
-    "    "
+    "\n",
+    "print(\"-----\")    \n",
+    "    \n",
+    "subDf_dict_Robust = {}\n",
+    "summaryDf_dict_Robust = {}\n",
+    "variables = [\"TN\",\"TP\",\"TEMP\",\"DO\",\"TURB\",\"VEL\",\"SS\",\"WDP\",\"CHLcal\",\"SECCHI\"]\n",
+    "for state in statesRobust:\n",
+    "    print(\"Max / state is: \", state)\n",
+    "    subDf_dict_Robust[state] = getSubdf(scomplex_RobustScaled, statesRobust[state], df)\n",
+    "    summaryDf = pd.DataFrame()\n",
+    "    for var in variables:\n",
+    "        summaryDf[var] = subDf_dict_Robust[state][var].describe()\n",
+    "    summaryDf_dict_Robust[state] = summaryDf\n",
+    "    #display(summaryDf)\n",
+    "\n",
+    "print(\"------\")\n",
+    "subDf_dict_Standard = {}\n",
+    "summaryDf_dict_Standard = {}\n",
+    "variables = [\"TN\",\"TP\",\"TEMP\",\"DO\",\"TURB\",\"VEL\",\"SS\",\"WDP\",\"CHLcal\",\"SECCHI\"]\n",
+    "for state in statesStandard:\n",
+    "    print(\"Max / state is: \", state)\n",
+    "    subDf_dict_Standard[state] = getSubdf(scomplex_StandardScaled, statesStandard[state], df)\n",
+    "    summaryDf = pd.DataFrame()\n",
+    "    for var in variables:\n",
+    "        summaryDf[var] = subDf_dict_Standard[state][var].describe()\n",
+    "    summaryDf_dict_Robust[state] = summaryDf\n",
+    "    #display(summaryDf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "01790c2c-cb19-430e-8154-d045035174e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['cube37_cluster0',\n",
-       " 'cube289_cluster2',\n",
-       " 'cube103_cluster0',\n",
-       " 'cube545_cluster0',\n",
-       " 'cube334_cluster0',\n",
-       " 'cube257_cluster0',\n",
-       " 'cube39_cluster0',\n",
-       " 'cube180_cluster0',\n",
-       " 'cube364_cluster0',\n",
-       " 'cube23_cluster0',\n",
-       " 'cube27_cluster0']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(summaryDf_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "404bbc40-1dfc-4a67-8c69-d9dafeccccd0",
    "metadata": {},
    "outputs": [],
@@ -187,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "d382185f-8fb9-473a-91d3-148b93ae24be",
    "metadata": {},
    "outputs": [
@@ -205,14 +255,66 @@
       "cube180_cluster0 has a node count:  4  , and a datapoint count:  23.0\n",
       "cube364_cluster0 has a node count:  44  , and a datapoint count:  747.0\n",
       "cube23_cluster0 has a node count:  9  , and a datapoint count:  292.0\n",
-      "cube27_cluster0 has a node count:  8  , and a datapoint count:  88.0\n"
+      "cube27_cluster0 has a node count:  8  , and a datapoint count:  88.0\n",
+      "-----\n",
+      "cube383_cluster0 has a node count:  4  , and a datapoint count:  17.0\n",
+      "cube490_cluster0 has a node count:  3  , and a datapoint count:  14.0\n",
+      "cube39_cluster0 has a node count:  88  , and a datapoint count:  4504.0\n",
+      "cube334_cluster0 has a node count:  8  , and a datapoint count:  93.0\n",
+      "cube627_cluster0 has a node count:  36  , and a datapoint count:  292.0\n",
+      "cube545_cluster0 has a node count:  14  , and a datapoint count:  201.0\n",
+      "cube364_cluster0 has a node count:  33  , and a datapoint count:  1264.0\n",
+      "cube459_cluster0 has a node count:  5  , and a datapoint count:  26.0\n",
+      "cube300_cluster0 has a node count:  9  , and a datapoint count:  91.0\n",
+      "cube380_cluster0 has a node count:  4  , and a datapoint count:  21.0\n",
+      "cube222_cluster0 has a node count:  9  , and a datapoint count:  76.0\n",
+      "cube339_cluster0 has a node count:  6  , and a datapoint count:  43.0\n",
+      "cube376_cluster0 has a node count:  7  , and a datapoint count:  33.0\n",
+      "cube181_cluster0 has a node count:  14  , and a datapoint count:  184.0\n",
+      "cube114_cluster0 has a node count:  13  , and a datapoint count:  80.0\n",
+      "cube168_cluster0 has a node count:  40  , and a datapoint count:  1868.0\n",
+      "cube487_cluster0 has a node count:  10  , and a datapoint count:  83.0\n",
+      "cube220_cluster0 has a node count:  13  , and a datapoint count:  189.0\n",
+      "cube265_cluster0 has a node count:  16  , and a datapoint count:  68.0\n",
+      "cube78_cluster0 has a node count:  11  , and a datapoint count:  138.0\n",
+      "cube62_cluster0 has a node count:  37  , and a datapoint count:  4263.0\n",
+      "-----\n",
+      "cube627_cluster0 has a node count:  36  , and a datapoint count:  292.0\n",
+      "cube490_cluster0 has a node count:  3  , and a datapoint count:  14.0\n",
+      "cube220_cluster0 has a node count:  16  , and a datapoint count:  189.0\n",
+      "cube383_cluster0 has a node count:  4  , and a datapoint count:  17.0\n",
+      "cube222_cluster0 has a node count:  9  , and a datapoint count:  76.0\n",
+      "cube64_cluster0 has a node count:  122  , and a datapoint count:  6128.0\n",
+      "cube334_cluster0 has a node count:  12  , and a datapoint count:  93.0\n",
+      "cube62_cluster0 has a node count:  61  , and a datapoint count:  4263.0\n",
+      "cube380_cluster0 has a node count:  4  , and a datapoint count:  21.0\n",
+      "cube364_cluster0 has a node count:  40  , and a datapoint count:  1264.0\n",
+      "cube188_cluster0 has a node count:  8  , and a datapoint count:  43.0\n",
+      "cube300_cluster0 has a node count:  10  , and a datapoint count:  91.0\n",
+      "cube114_cluster0 has a node count:  12  , and a datapoint count:  80.0\n",
+      "cube339_cluster0 has a node count:  6  , and a datapoint count:  43.0\n",
+      "cube487_cluster0 has a node count:  10  , and a datapoint count:  83.0\n",
+      "cube265_cluster0 has a node count:  14  , and a datapoint count:  68.0\n",
+      "cube376_cluster0 has a node count:  7  , and a datapoint count:  33.0\n",
+      "cube459_cluster0 has a node count:  5  , and a datapoint count:  26.0\n",
+      "cube78_cluster0 has a node count:  11  , and a datapoint count:  138.0\n",
+      "cube545_cluster0 has a node count:  14  , and a datapoint count:  201.0\n"
      ]
     }
    ],
    "source": [
     "keys = list(subDf_dict.keys())\n",
     "for key in keys:\n",
-    "    print(key, \"has a node count: \" ,len(scomplex['states'][key]), \" , and a datapoint count: \", summaryDf_dict[key].loc['count'][0])"
+    "    print(key, \"has a node count: \" ,len(scomplex['states'][key]), \" , and a datapoint count: \", summaryDf_dict[key].loc['count'][0])\n",
+    "print(\"-----\")\n",
+    "keysRobust = list(subDf_dict_Robust.keys())\n",
+    "for key in keysRobust:\n",
+    "    print(key, \"has a node count: \" ,len(scomplex_RobustScaled['states'][key]), \" , and a datapoint count: \", summaryDf_dict_Robust[key].loc['count'][0])\n",
+    "    \n",
+    "print(\"-----\")\n",
+    "keysStandard = list(subDf_dict_Standard.keys())\n",
+    "for key in keysStandard:\n",
+    "    print(key, \"has a node count: \" ,len(scomplex_StandardScaled['states'][key]), \" , and a datapoint count: \", summaryDf_dict_Robust[key].loc['count'][0])"
    ]
   },
   {
@@ -225,9 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "82e9498d-aae7-402d-8ae8-e4a1bcb53c37",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -739,8 +842,32 @@
     }
    ],
    "source": [
-    "keys = ['cube37_cluster0', 'cube103_cluster0', 'cube39_cluster0', 'cube364_cluster0', 'cube23_cluster0' ]\n",
-    "#keys = list(subDf_dict.keys()) # test everything\n",
+    "Robustkeys = [\n",
+    "    'cube39_cluster0', \n",
+    "    'cube627_cluster0', \n",
+    "    'cube545_cluster0', \n",
+    "    'cube364_cluster0', \n",
+    "    'cube181_cluster0',\n",
+    "    'cube168_cluster0',\n",
+    "    'cube220_cluster0',\n",
+    "    'cube78_cluster0', \n",
+    "    'cube62_cluster0' ] # for robust scaled\n",
+    "keys = [\n",
+    "    'cube37_cluster0', \n",
+    "    'cube103_cluster0', \n",
+    "    'cube39_cluster0', \n",
+    "    'cube364_cluster0', \n",
+    "    'cube23_cluster0'] # non scaled\n",
+    "StandardKeys = [\n",
+    "    'cube627_cluster0',\n",
+    "    'cube220_cluster0',\n",
+    "    'cube64_cluster0',\n",
+    "    'cube62_cluster0',\n",
+    "    'cube364_cluster0',\n",
+    "    'cube78_cluster0',\n",
+    "    'cube545_cluster0'\n",
+    "]\n",
+    "#change the keys variable, summaryDf_dict variable, subDf_dict variable to test the 3 scaling methods (robust, standard, none)\n",
     "for var in variables:\n",
     "    for state1 in keys:\n",
     "        pvals = []\n",
@@ -767,19 +894,23 @@
    "id": "8a558c87-78d3-4deb-895c-7c6d843c3b8a",
    "metadata": {},
    "source": [
-    "### Preliminary Results from T test\n",
+    "## Preliminary Results from T test\n",
+    "### All from non scaled Data\n",
     "The results from checking each variable against each one. If nothing is listed, then those were all found to be significantly different after doing a bonferroni correction. <br>\n",
     "TN: the state from cube 39 and from cube 23 are not different and WDP: 39 and 23 are not different <br>\n",
     "TEMP: Cube 39 and cube 364 are not different <br>\n",
     "SS: 37 and 103 are not different <br>\n",
-    "From this, and our initial hypothesis about TN, TP, and SS being state variables, it seems that it is likely that 39 and 23 could be similar states, since they still have different TP and SS. The same idea applies to 37 and 103."
+    "From this, and our initial hypothesis about TN, TP, and SS being state variables, it seems that it is likely that 39 and 23 could be similar states, since they still have different TP and SS. The same idea applies to 37 and 103. <br>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
    "id": "0dbe3542-e15f-453a-84e9-d2ea1c854f90",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -888,6 +1019,53 @@
     "            print(\"They are all different\")\n",
     "          \n",
     "        print(\"---------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a6b53172-f199-479f-803b-3ad3684c2168",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cube217_cluster1',\n",
+       " 'cube217_cluster0',\n",
+       " 'cube257_cluster0',\n",
+       " 'cube256_cluster0']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scomplex['states']['cube257_cluster0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0ced4c7e-3f1a-45c5-aec0-1ad81eab30b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found it in  cube257_cluster0\n",
+      "Found it in  cube180_cluster0\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = list(subDf_dict.keys())\n",
+    "for key in keys:\n",
+    "    state = scomplex['states'][key]\n",
+    "    if 'cube217_cluster1' in state:\n",
+    "        print(\"Found it in \", key)"
    ]
   }
  ],
